<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/padding_for_layout">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            app:tint="@color/day_night"
            android:src="@drawable/back" />

        <TextView
            android:fontFamily="@font/ys_display_medium"
            android:textFontWeight="500"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="12dp"
            android:layout_toEndOf="@id/backButton"
            android:text="@string/button_setting"
            android:textColor="@color/day_night"
            android:textSize="@dimen/primary_text_size" />
    </LinearLayout>


    <Switch
        style="@style/SwitchTheme" />

    <FrameLayout
        style="@style/Boxframe">
        <ImageView
            style="@style/ImageCase"
            android:src="@drawable/sent"/>
        <TextView
            style="@style/TextSettings"
            android:text="@string/send_app" />
    </FrameLayout>

    <FrameLayout
        style="@style/Boxframe">
        <ImageView
            style="@style/ImageCase"
            android:src="@drawable/group" />
        <TextView
            style="@style/TextSettings"
            android:text="@string/support" />
    </FrameLayout>

    <FrameLayout
        style="@style/Boxframe">
        <ImageView
            style="@style/ImageCase"
            android:src="@drawable/agreement" />
        <TextView
            style="@style/TextSettings"
            android:text="@string/user_agree"/>
    </FrameLayout>


</LinearLayout>
