<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingStart="@dimen/padding_for_layout"
    android:paddingEnd="12dp">


  <RelativeLayout

      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingTop="4dp">


    <ImageView
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:src="@drawable/back" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="20dp"
        android:layout_toEndOf="@id/backButton"
        android:text="@string/button_setting"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        android:textSize="@dimen/primary_text_size" />

  </RelativeLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingTop="24dp"
      android:orientation="vertical">


    <Switch
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:text="@string/night_theme"
        android:textSize="@dimen/setting_text_size"
        android:checked="false"

        />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="61dp">

      <ImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="end|center_vertical"
          android:src="@drawable/sent"/>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="start|center_vertical"
          android:text="@string/send_app"
          android:textColor="@color/black"
          android:textSize="@dimen/setting_text_size"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="61dp">

      <ImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="end|center_vertical"
          android:src="@drawable/group"/>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="start|center_vertical"
          android:text="@string/support"
          android:textColor="@color/black"
          android:textSize="@dimen/setting_text_size"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="61dp">

      <ImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="end|center_vertical"
          android:src="@drawable/agreement"
          android:scaleType="centerCrop"/>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="start|center_vertical"
          android:text="@string/user_agree"
          android:textColor="@color/black"
          android:textSize="@dimen/setting_text_size"/>
    </FrameLayout>

  </LinearLayout>


</LinearLayout>
