<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/YP_blue"
        android:orientation="vertical"
        android:padding="@dimen/padding_for_layout">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/primary_text_size"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="28dp"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:textAllCaps="false"
                android:id="@+id/searchButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/standart_padding"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:text="@string/button_search"
                android:textColor="@color/YP_black"
                android:textSize="@dimen/primary_text_size"
                app:cornerRadius="@dimen/padding_for_layout"
                app:icon="@drawable/search"
                app:iconSize="@dimen/primary_text_size"
                app:iconGravity="textStart"
                app:iconPadding="@dimen/standart_padding"
                app:iconTint="@color/YP_black"
                android:foreground="?attr/selectableItemBackground"/>

            <com.google.android.material.button.MaterialButton
                android:textAllCaps="false"
                android:id="@+id/libraryButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="@dimen/standart_padding"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:text="@string/button_media_library"
                android:textColor="@color/YP_black"
                android:textSize="@dimen/primary_text_size"
                app:cornerRadius="@dimen/padding_for_layout"
                app:icon="@drawable/tracks"
                app:iconSize="@dimen/primary_text_size"
                app:iconGravity="textStart"
                app:iconPadding="@dimen/standart_padding"
                app:iconTint="@color/YP_black"
                android:foreground="?attr/selectableItemBackground"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/settingsButton"
                android:textAllCaps="false"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="@dimen/standart_padding"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:text="@string/button_setting"
                android:textColor="@color/YP_black"
                android:textSize="@dimen/primary_text_size"
                app:cornerRadius="@dimen/padding_for_layout"
                app:icon="@drawable/set"
                app:iconSize="@dimen/primary_text_size"
                app:iconGravity="textStart"
                app:iconPadding="@dimen/standart_padding"
                app:iconTint="@color/YP_black"
                android:foreground="?attr/selectableItemBackground"/>
        </LinearLayout>

    </LinearLayout>
