<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/frame_padding24" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/frame_padding24" />

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/correction_padding4"
        android:layout_marginTop="@dimen/standart_padding8"
        app:layout_constraintBottom_toTopOf="@id/image_album"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back" />

    <TextView
        android:id="@id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/correction_padding4"
        android:fontFamily="@font/ys_display_medium"
        android:paddingStart="@dimen/padding_for_layout16"
        android:text="@string/title_new_playlist"
        android:textFontWeight="500"
        android:textSize="@dimen/primary_text_size26"
        app:layout_constraintBottom_toBottomOf="@id/backButton"
        app:layout_constraintStart_toEndOf="@id/backButton"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_album"
        android:layout_width="@dimen/zero"
        android:layout_height="@dimen/zero"
        android:layout_marginHorizontal="@dimen/standart_padding8"
        android:layout_marginTop="@dimen/frame_padding24"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toStartOf="@+id/rightBorder"
        app:layout_constraintStart_toStartOf="@+id/leftBorder"
        app:layout_constraintTop_toBottomOf="@+id/backButton"
        android:src="@drawable/create_photo_bg" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_layout"
        style="@style/FrameStyle"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding32"
        android:hint="@string/input_name"
        app:layout_constraintEnd_toStartOf="@+id/rightBorder"
        app:layout_constraintStart_toStartOf="@+id/leftBorder"
        app:layout_constraintTop_toBottomOf="@+id/image_album">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_et"
            style="@style/InsideFrameStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/description_layout"
        style="@style/FrameStyle"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_for_layout16"
        android:hint="@string/input_description"
        app:layout_constraintEnd_toStartOf="@+id/rightBorder"
        app:layout_constraintStart_toStartOf="@+id/leftBorder"
        app:layout_constraintTop_toBottomOf="@+id/name_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/description_et"
            style="@style/InsideFrameStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/create_button"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding32"
        android:text="@string/create"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:fontFamily="@font/ys_display_medium"
        android:textFontWeight="400"
        android:textSize="@dimen/text_size_16"
        android:background="@drawable/create_buttom"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/rightBorder"
        app:layout_constraintStart_toStartOf="@+id/leftBorder"


        />
</androidx.constraintlayout.widget.ConstraintLayout>