<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

        <TextView
            style="@style/ToolbarTitle"
            android:text="@string/button_search" />

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/padding_for_layout"
        android:layout_marginTop="@dimen/padding_for_layout"
        android:background="@drawable/search_frame"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/searchIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/standart_padding"
            android:src="@drawable/search"
            app:tint="@color/text_hint"

            />

        <EditText
            android:id="@+id/inputEditText"
            style="@style/EditTextStyle"
            android:layout_width="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:singleLine="true"
            tools:ignore="TouchTargetSizeCheck"
            />

        <ImageView

            android:id="@+id/clearIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_margin="@dimen/standart_padding"
            android:src="@drawable/clean_line"
            android:visibility="gone"
            app:tint="@color/text_hint" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleViewSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/frame_padding24"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:visibility="gone"
        android:background="@color/navigate_panel_bg"/>

    <LinearLayout
        android:id="@+id/placeholder_head"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="104dp"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/error_note_left"
            app:tint="@color/day_night"/>

        <ImageView
            android:id="@+id/image_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginRight="5dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:src="@drawable/error_note_right"
            app:tint="@color/day_night"/>

    </FrameLayout>

    <TextView
        android:id="@+id/placeholderMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/ys_display_medium"
        android:gravity="center"
        android:paddingHorizontal="46dp"
        android:textSize="19sp"
        android:text="@string/error_empty_search"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/updateButton"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/primary_text_size"
            android:text="@string/update"
            android:textSize="@dimen/text_size_14"
            app:cornerRadius="@dimen/frame_padding24"
            android:letterSpacing="0"
            android:visibility="gone"
            />
</LinearLayout>
    <ProgressBar android:id="@+id/progressBar"
        android:layout_marginTop="@dimen/height_settings"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:indeterminateTint="@color/YP_blue"
        android:visibility="gone"/>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/history_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/frame_padding24"
        android:paddingBottom="@dimen/frame_padding24"
        android:orientation="vertical"
        android:visibility="gone"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_history"
            android:textSize="@dimen/text_size_22"
            android:gravity="center_horizontal"
            android:padding="@dimen/padding_for_layout"
            android:fontFamily="@font/ys_display_medium"
            android:textFontWeight="500"
            />
        <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/frame_padding24"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />



        <com.google.android.material.button.MaterialButton
            android:id="@+id/clear_history_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/frame_padding24"
            style="@style/updateButton"
            android:layout_gravity="center"
            android:text="@string/clear"
            android:textSize="@dimen/text_size_14"
            app:cornerRadius="@dimen/frame_padding24"
            android:letterSpacing="0" />
    </LinearLayout>

</ScrollView>

</LinearLayout>